Fix getting-started icon design section not showing.
Reviewed-on: https://code.commerceguys.com/3936
Build: Hudson bot <bender@commerceguys.com>

--- a/themes/commerce_kickstart_admin/commerce_kickstart_admin.css
+++ b/themes/commerce_kickstart_admin/commerce_kickstart_admin.css
@@ -415,12 +415,6 @@ h1#overlay-title {
   color: #000;
   padding: 20px 20px 20px 95px;
 }
-.advanced-help-topic .design a {
-  background: transparent url("images/design.png") no-repeat 30px 0;
-}
-.advanced-help-topic .design .ui-icon {
-  left: 180px;
-}
 .advanced-help-topic .products .ui-accordion-header a {
   background: transparent url("images/products.png") no-repeat 30px 0;
 }
